// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeSnippet copy confirmation is not shown by default 1`] = `
<div
  className="group relative mb-2 "
>
  <pre
    className="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is not shown by default 1`] = `
<div
  className="group relative mb-2 "
>
  <pre
    className="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is shown on hover 1`] = `
<div
  className="group relative mb-2 "
>
  <pre
    className="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
</div>
`;

exports[`CodeSnippet copy guidance is shown on hover 2`] = `
<div
  className="group relative mb-2 cursor-pointer"
>
  <pre
    className="relative overflow-x-scroll rounded-md border border-gray-300 bg-gray-200 p-2 leading-5 dark:border-gray-700 dark:bg-gray-800"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <code
      className="font-mono"
    >
      const greeting = 'Hello, world!'
    </code>
  </pre>
  <div
    className="left pointer-events-none absolute top-0 flex h-full w-full items-center justify-center rounded-md bg-black text-base font-bold text-white opacity-75 dark:bg-gray-100 dark:text-black"
  >
    Click to copy
  </div>
</div>
`;
